<resources>
    <string name="app_name">Restaurant Table App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_internet">No internet connection!</string>
    <string name="table_alread_booked">Table is already booked for this customer</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="free">Free</string>
    <string name="circle">circle</string>
    <string name="square">square</string>
    <string name="want_to_free_table">Do you want to free the table?</string>
    <string name="close_app">Close App</string>
    <string name="first_last_name">FirstName LastName</string>
    <string name="customer_name">Marylin Monro</string>
    <string name="reserved_by">Reserved by :</string>
    <string name="table_id_value">101</string>
    <string name="table_id">Table Id:</string>
    <string name="tables">Tables</string>
    <string name="customers">Customers</string>
</resources>
